# tock

./: Cargo.toml  Makefile_auto
arch/cortex-m/: Cargo.toml
arch/cortex-m/src/: lib.rs  nvic.rs  script
arch/cortex-m0/src/: lib.rs
boards/: README.md
boards/clue_nrf52840/src/: main.rs
boards/components/src/: adc.rs  bmp280.rs  bus.rs  esp_serial_component.rs  ft6x06.rs  (+14 more)
boards/microbit_v2/: Makefile  README.md
boards/mkr1010/: Cargo.toml  Makefile  README.md  layout.ld
boards/mkr1010/src/: io.rs  main.rs
boards/nucleo_f429zi/: Makefile
boards/stm32f3discovery/: Makefile
boards/stm32f412gdiscovery/: Makefile  stm32f4_discovery-apps.resc
boards/stm32f4discovery/: Cargo.toml  Makefile  README.md  chip_layout.ld  stm32f4_discovery.resc  stm32f4_discovery_apps.resc
boards/stm32f4discovery/src/: io.rs  main.rs
boards/stm32f4discovery_renode/: Cargo.toml  Makefile  chip_layout.ld
capsules/src/: bmp280.rs  bus.rs  driver.rs  esp_serial.rs  fm25cl.rs  ft6206.rs  ft6x06.rs  fxos8700cq.rs  hd44780.rs  i2c_master.rs  i2c_master_slave_driver.rs  isl29035.rs  l3gd20.rs  lib.rs  lps25hb.rs  ls016b8uy.rs  lsm303dlhc.rs  ltc294x.rs  max17205.rs  mcp230xx.rs  memory_async.rs  modbus.rs  mx25r6435f.rs  pca9544a.rs  pressure.rs  pwm.rs  rf233.rs  screen.rs  sdcard.rs  si7021.rs  spi.rs  st7735.rs  st7789h2.rs  st77xx.rs  temperature_stm.rs  text_screen.rs  timer.rs  touch.rs  tsl2561.rs  virtual_adc.rs  (+3 more)
chips/imxrt1050/: Cargo.toml
chips/samd21/: Cargo.toml  README.md
chips/stm32f3xx/: Cargo.toml
chips/stm32f407zg/: Cargo.toml
kernel/src/: config.rs
(+65 files in other folders)
